# moshi-core

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: bump_version.sh  init_firestore.py
src/moshi/: .gitignore  __init__.py  base.py  exceptions.py  user.py  version.py
src/moshi/api/: auth.py  core.py
src/moshi/api/routes/: offer.py  simple.py
src/moshi/call/: __init__.py  detector.py  responder.py  think.py  webrtc.py
src/moshi/core/: __init__.py  activities.py  base.py  character.py  const.py  exceptions.py  setting.py  topics.py  transcript.py  user.py
src/moshi/core/activities/: __init__.py  core.py  lesson.py  unstructured.py
src/moshi/utils/: __init__.py  audio.py  comp.py  ctx.py  lang.py  log.py  secrets.py  speech.py  storage.py  user.py  wavfile.py
tests/: conftest.py  test_activities.py  test_audio.py  test_completions.py  test_log.py  test_secret.py  test_speech.py  test_transcript.py
tests/data/: hello.m4a  hello_mono.flac
